--- a/bug315/Views/Home/Index.cshtml
+++ b/bug315/Views/Home/Index.cshtml
@@ -1,11 +1,35 @@
-﻿@{
+﻿@model bug315.Models.WorkItemIndexVm
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>@Model.WelcomeMessage</h1>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <td>
+                        Task/Bug
+                    </td>
+                    <td>
+                        Priority
+                    </td>
+
+
+                </tr>
+            </thead>
+            @foreach (var bug in Model.WorkItemList)
+            {
+                <tr>
+                    <td>@bug.Title</td>
+                    <td>@bug.Priority</td>
+
+                </tr>
+
+            }
+        </table>
+    </div>
 </div>
 
 <div class="row">
