--- a/bug315/Views/Home/Index.cshtml
+++ b/bug315/Views/Home/Index.cshtml
@@ -15,6 +15,9 @@
                     <td>
                         Priority
                     </td>
+                    <td>
+                        Type
+                    </td>
 
 
                 </tr>
@@ -24,6 +27,7 @@
                 <tr>
                     <td>@bug.Title</td>
                     <td>@bug.Priority</td>
+                    <td>@bug.GetType()</td>
 
                 </tr>
 
@@ -34,18 +38,20 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
+        <h2>BUG</h2>
+        @foreach (var b in Model.BugList)
+        {
+            <div>@b.Title <br /> @b.StepsToReproduce</div>
+            <hr />
+        }
+       </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Tasks</h2>
+        @foreach (var b in Model.TaskList)
+        { 
+            <div>@b.Title <br /> @b.Description </div>
+            <hr />
+        }
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
