added counter to homecontroller

--- a/bug315/Views/Home/Index.cshtml
+++ b/bug315/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>@Model.WelcomeMessage</h1>
+    <h1>@Model.Count @Model.WelcomeMessage</h1>
     <div>
         <table>
             <thead>
